[gd_scene load_steps=3 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://Scenes/HelperScenes/DateLine.tscn" type="PackedScene" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -258.5
margin_top = -150.5
margin_right = 258.5
margin_bottom = 150.5
mode_overrides_title = false
access = 2
current_dir = "C:/Users/John Deisher/Documents/GitHub/MyTime/MyTime"
current_path = "C:/Users/John Deisher/Documents/GitHub/MyTime/MyTime/"

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -85.0
margin_right = 182.0
margin_bottom = 114.0
popup_exclusive = true
window_title = "Select Dates"

[node name="MarginContainer" type="MarginContainer" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -2.0
margin_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog/MarginContainer"]
margin_left = 5.0
margin_top = 10.0
margin_right = 327.0
margin_bottom = 190.0
size_flags_vertical = 4

[node name="EndDate" parent="WindowDialog/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 300.0
margin_bottom = 30.0
size_flags_horizontal = 0
size_flags_vertical = 6
date_title = "Last Date"
key = "end"

[node name="StartDate" parent="WindowDialog/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 34.0
margin_right = 300.0
margin_bottom = 64.0
size_flags_horizontal = 0
size_flags_vertical = 6
date_title = "First Date:"
key = "start"

[node name="HBoxContainer" type="HBoxContainer" parent="WindowDialog/MarginContainer/VBoxContainer"]
margin_left = 33.0
margin_top = 68.0
margin_right = 289.0
margin_bottom = 98.0
size_flags_horizontal = 4

[node name="Button" type="Button" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 30 )
size_flags_horizontal = 4
text = "1 Day"

[node name="Button2" type="Button" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 114.0
margin_bottom = 30.0
size_flags_horizontal = 4
text = "1 Week"

[node name="Button3" type="Button" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 118.0
margin_right = 185.0
margin_bottom = 30.0
size_flags_horizontal = 4
text = "2 Weeks"

[node name="Button4" type="Button" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 189.0
margin_right = 256.0
margin_bottom = 30.0
size_flags_horizontal = 4
text = "4 Weeks"

[node name="CheckBox" type="CheckBox" parent="WindowDialog/MarginContainer/VBoxContainer"]
margin_left = 102.0
margin_top = 102.0
margin_right = 220.0
margin_bottom = 126.0
size_flags_horizontal = 4
pressed = true
text = "Simple Report"

[node name="HBoxContainer2" type="HBoxContainer" parent="WindowDialog/MarginContainer/VBoxContainer"]
margin_left = 61.0
margin_top = 130.0
margin_right = 261.0
margin_bottom = 180.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="ButtonAccept" type="Button" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 11.0
margin_top = 10.0
margin_right = 86.0
margin_bottom = 40.0
rect_min_size = Vector2( 75, 30 )
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Accept"

[node name="ButtonCancel" type="Button" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 113.0
margin_top = 10.0
margin_right = 188.0
margin_bottom = 40.0
rect_min_size = Vector2( 75, 30 )
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Cancel"
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="popup_hide" from="FileDialog" to="." method="_on_FileDialog_popup_hide"]
[connection signal="popup_hide" from="WindowDialog" to="." method="_on_WindowDialog_popup_hide"]
[connection signal="pressed" from="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer2/ButtonAccept" to="." method="_on_ButtonAccept_pressed"]
[connection signal="pressed" from="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer2/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
